--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -41,63 +41,110 @@
 	for (m = urlRegex.Match(description); m.Success; m = m.NextMatch())
 		description = description.Replace(m.Groups[0].ToString(),
 			$"{Url.ActionContext.HttpContext.Request.Host}");
+	
+	bool canPlay = true;
 }
 
 <!-- TODO: chapters -->
 <div class="watch-page">
 	<div class="primary">
 		<div class="video-player-container">
-			@if (Model.Player.Formats.Length > 0 || live && !compatibility)
+			@if (Model.MobileLayout)
 			{
-				@if (live)
+				@if (Model.Player.Formats.Length > 0 || live && !compatibility)
 				{
-					<video id="player" class="video-js player" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url" controls>
-						@foreach (Format format in Model.Player.AdaptiveFormats.Reverse())
-						{
-							@:<source label='@format.Resolution.Split("x")[1]P' src='/proxy/hls?url=@HttpUtility.UrlEncode(format.Url.ToString())' type="application/x-mpegURL">
-						}
-
-						@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
-						{
-							@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url.ToString())" label="@subtitle.Language" kind="subtitles">
-						}
-					</video>
-				}
-				else
-				{
-					<video id="player" class="video-js player" src="/proxy/video?url=@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url" controls>
-						@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
-						{
-							@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url.ToString())" label="@subtitle.Language" kind="subtitles">
-						}
-					</video>
-				}
-			}
-			else if (live && compatibility)
-			{
-				<div id="player" class="player error" style="background-image: url('@Model.Player.Thumbnails.LastOrDefault()?.Url')">
-					<span style="text-align: center">
-						Livestreams cannot be played in compatibility mode<br>
-						<a style="color: #77F" href="/toggles/compatibility?redirectUrl=@(HttpUtility.UrlEncode($"{Context.Request.Path}{Context.Request.QueryString}"))">Click here</a> to disable compatibility mode
-					</span>
-				</div>
-			}
-			else
-			{
-				<div id="player" class="player error" style="background-image: url('@Model.Player.Thumbnails.LastOrDefault()?.Url')">
-					@if (string.IsNullOrWhiteSpace(Model.Player.ErrorMessage))
+					@if (live)
 					{
-						<span>
-							No playable streams returned from the API (@Model.Player.Formats.Length/@Model.Player.AdaptiveFormats.Length)
-						</span>
+						<video id="player" class="video-js player" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url" controls>
+							@foreach (Format format in Model.Player.AdaptiveFormats.Reverse())
+							{
+								@:<source label='@format.Resolution.Split("x")[1]P' src='/proxy/hls?url=@HttpUtility.UrlEncode(format.Url.ToString())' type="application/x-mpegURL">
+							}
+
+							@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
+							{
+								@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url.ToString())" label="@subtitle.Language" kind="subtitles">
+							}
+						</video>
 					}
 					else
 					{
-						<span>
-							@Model.Player.ErrorMessage
-						</span>
+						<video id="player" class="video-js player" src="/proxy/video?url=@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url" controls>
+							@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
+							{
+								@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url.ToString())" label="@subtitle.Language" kind="subtitles">
+							}
+						</video>
 					}
-				</div>
+				}
+				else if (live && compatibility)
+				{
+					<div id="player" class="player error" style="background-image: url('@Model.Player.Thumbnails.LastOrDefault()?.Url')">
+						<span style="text-align: center">
+							Livestreams cannot be played in compatibility mode<br>
+							<a style="color: #77F" href="/toggles/compatibility?redirectUrl=@(HttpUtility.UrlEncode($"{Context.Request.Path}{Context.Request.QueryString}"))">Click here</a> to disable compatibility mode
+						</span>
+					</div>
+				}
+				else
+				{
+					<div id="player" class="player error" style="background-image: url('@Model.Player.Thumbnails.LastOrDefault()?.Url')">
+						@if (string.IsNullOrWhiteSpace(Model.Player.ErrorMessage))
+						{
+							<span>
+								No playable streams returned from the API (@Model.Player.Formats.Length/@Model.Player.AdaptiveFormats.Length)
+							</span>
+						}
+						else
+						{
+							<span>
+								@Model.Player.ErrorMessage
+							</span>
+						}
+					</div>
+				}
+			}
+			else
+			{
+				@if (Model.Player.Formats.Length > 0 || live)
+				{
+					@if (live)
+					{
+						<video class="embed" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
+							@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
+							{
+								@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url)" label="@subtitle.Language" kind="subtitles">
+							}
+						</video>
+					}
+					else
+					{
+						<video class="embed" controls src="/proxy/video?url=@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
+							@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
+							{
+								@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url)" label="@subtitle.Language" kind="subtitles">
+							}
+						</video>
+					}
+				}
+				else
+				{
+					canPlay = false;
+					<div id="player" class="player error embed" style="background-image: url('@Model.Player.Thumbnails.LastOrDefault()?.Url')">
+						@if (string.IsNullOrWhiteSpace(Model.Player.ErrorMessage))
+						{
+							<span>
+								No playable streams returned from the API (@Model.Player.Formats.Length/@Model.Player.AdaptiveFormats.Length)
+							</span>
+						}
+						else
+						{
+							<span>
+								@Model.Player.ErrorMessage
+							</span>
+						}
+					</div>
+				}
 			}
 		</div>
 		<div class="video-info">
@@ -231,117 +278,176 @@
 	</div>
 </div>
 
-@if (Model.Player.Formats.Length > 0 || live && !compatibility)
+@if (Model.MobileLayout)
 {
-	@if (!compatibility && !live)
+	@if (Model.Player.Formats.Length > 0 || live && !compatibility)
 	{
-		<script src="~/js/shaka-player/shaka-player.compiled.min.js"></script>
-		<script src="~/js/videojs/video.js"></script>
-		<script src="~/js/videojs/videojs-shaka.js"></script>
-		<script src="~/js/videojs/videojs-hotkeys.js"></script>
-		<script>
-		var player = videojs('player', {
-            techOrder: ['shaka'],
-            shaka: {
-              debug: false,
-              sideload: true,
-              configuration: {
-                manifest:
-                {
-					dash:{
-						ignoreEmptyAdaptationSet:true
+		@if (!compatibility && !live)
+		{
+			<script src="~/js/shaka-player/shaka-player.compiled.min.js"></script>
+			<script src="~/js/videojs/video.js"></script>
+			<script src="~/js/videojs/videojs-shaka.js"></script>
+			<script src="~/js/videojs/videojs-hotkeys.js"></script>
+			<script>
+			var player = videojs('player', {
+	            techOrder: ['shaka'],
+	            shaka: {
+	              debug: false,
+	              sideload: true,
+	              configuration: {
+	                manifest:
+	                {
+						dash:{
+							ignoreEmptyAdaptationSet:true
+						}
 					}
-				}
-              }   
-            },
-			controlBar: {
-   				children: [
-   					'playToggle',
-   					'volumePanel',
-   					'currentTimeDisplay',
-   					'timeDivider',
-   					'durationDisplay',
-   					'liveDisplay',
-   					'seekToLive',
-   					'progressControl',
-   					'spacer',
-   					'chaptersButton',
-   					'subsCapsButton',
-   					'playbackRateMenuButton',
-   					'qualitySelector',
-   					'pictureInPictureToggle',
-   					'fullscreenToggle',
-   				],
-   			}
-        }).ready(function() {
-			this.qualityPickerPlugin();
-			this.src([{
-				type: 'application/dash+xml',
-            	src: '/manifest/@(Model.Video.Id).mpd'
-            }]);
-			this.hotkeys({
-				volumeStep: 0.1,
-				seekStep: 5,
-				enableModifiersForNumbers: false,
-				enableVolumeScroll: false
+	              }   
+	            },
+				controlBar: {
+   					children: [
+   						'playToggle',
+   						'volumePanel',
+   						'currentTimeDisplay',
+   						'timeDivider',
+   						'durationDisplay',
+   						'liveDisplay',
+   						'seekToLive',
+   						'progressControl',
+   						'spacer',
+   						'chaptersButton',
+   						'subsCapsButton',
+   						'playbackRateMenuButton',
+   						'qualitySelector',
+   						'pictureInPictureToggle',
+   						'fullscreenToggle',
+   					],
+   				}
+	        }).ready(function() {
+				this.qualityPickerPlugin();
+				this.src([{
+					type: 'application/dash+xml',
+            		src: '/manifest/@(Model.Video.Id).mpd'
+	            }]);
+				this.hotkeys({
+					volumeStep: 0.1,
+					seekStep: 5,
+					enableModifiersForNumbers: false,
+					enableVolumeScroll: false
+				});
+				this.on("error", () => {if (confirm("Something has gone wrong while trying to play this video. Enable compatibility mode?")) {window.location = "/toggles/compatibility?redirectUrl=" + encodeURIComponent(window.location.href)}})
 			});
-			this.on("error", () => {if (confirm("Something has gone wrong while trying to play this video. Enable compatibility mode?")) {window.location = "/toggles/compatibility?redirectUrl=" + encodeURIComponent(window.location.href)}})
-		});
+			</script>
+		}
+		else
+		{
+			<script src="~/js/videojs/video.js"></script>
+			<script src="~/js/videojs/videojs-quality-selector.js"></script>
+			<script src="~/js/videojs/videojs-hotkeys.js"></script>
+
+			<script>
+			const player = videojs('player', {
+				controlBar: {
+					children: [
+						'playToggle',
+						'volumePanel',
+						'currentTimeDisplay',
+						'timeDivider',
+						'durationDisplay',
+						'liveDisplay',
+						'seekToLive',
+						'progressControl',
+						'spacer',
+						'chaptersButton',
+						'subsCapsButton',
+						'playbackRateMenuButton',
+						'qualitySelector',
+						'pictureInPictureToggle',
+						'fullscreenToggle',
+					],
+				}
+			}).ready(function() {
+				this.src([
+					@if (live)
+					{
+						foreach (Format format in Model.Player.AdaptiveFormats.Reverse().GroupBy(x => x.FormatNote).Select(g => g.First()))
+						{
+							@:{src: '/proxy/hls?url=@HttpUtility.UrlEncode(format.Url.ToString())'},
+						}
+					}
+					else
+					{
+						foreach (Format format in Model.Player.Formats.Reverse().GroupBy(x => x.FormatNote).Select(g => g.First()))
+						{
+							NameValueCollection query = HttpUtility.ParseQueryString(format.Url.Split("?")[1]);
+
+							@:{src: '/proxy/video?url=@HttpUtility.UrlEncode(format.Url.ToString())',type: '@query.Get("mime")',label: '@format.FormatNote', selected: @(format.FormatNote.StartsWith("720p") ? "true" : "false")},
+						}
+					}
+				]);
+				this.hotkeys({
+					volumeStep: 0.1,
+					seekStep: 5,
+					enableModifiersForNumbers: false,
+					enableVolumeScroll: false
+				});
+			  });
 		</script>
+		}
 	}
-	else
+}
+else
+{
+	@if (canPlay)
 	{
-		<script src="~/js/videojs/video.js"></script>
-		<script src="~/js/videojs/videojs-quality-selector.js"></script>
-		<script src="~/js/videojs/videojs-hotkeys.js"></script>
-
-		<script>
-		const player = videojs('player', {
-			controlBar: {
-				children: [
-					'playToggle',
-					'volumePanel',
-					'currentTimeDisplay',
-					'timeDivider',
-					'durationDisplay',
-					'liveDisplay',
-					'seekToLive',
-					'progressControl',
-					'spacer',
-					'chaptersButton',
-					'subsCapsButton',
-					'playbackRateMenuButton',
-					'qualitySelector',
-					'pictureInPictureToggle',
-					'fullscreenToggle',
-				],
-			}
-		}).ready(function() {
-			this.src([
-				@if (live)
-				{
-					foreach (Format format in Model.Player.AdaptiveFormats.Reverse().GroupBy(x => x.FormatNote).Select(g => g.First()))
-					{
-						@:{src: '/proxy/hls?url=@HttpUtility.UrlEncode(format.Url.ToString())'},
-					}
-				}
-				else
-				{
-					foreach (Format format in Model.Player.Formats.Reverse().GroupBy(x => x.FormatNote).Select(g => g.First()))
-					{
-						NameValueCollection query = HttpUtility.ParseQueryString(format.Url.Split("?")[1]);
-
-						@:{src: '/proxy/video?url=@HttpUtility.UrlEncode(format.Url.ToString())',type: '@query.Get("mime")',label: '@format.FormatNote', selected: @(format.FormatNote.StartsWith("720p") ? "true" : "false")},
-					}
-				}
-			]);
-			this.hotkeys({
-				volumeStep: 0.1,
-				seekStep: 5,
-				enableModifiersForNumbers: false,
-				enableVolumeScroll: false
-			});
-		  });
-	</script>
+		<script src="/js/lt-video/player-desktop.js"></script>
+		@if (!Model.CompatibilityMode && !live)
+		{
+			<script src="/js/shaka-player/shaka-player.compiled.min.js"></script>
+			<script>
+        let player = undefined;
+        loadPlayerWithShaka("video", {
+            "id": "@Model.Video.Id",
+            "title": "@Model.Video.Title",
+            "embed": false,
+            "live": false,
+            "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault(x => x.FormatId == "sb2")?.Url)"
+        }, [
+            @foreach (Format f in Model.Player.Formats.Reverse())
+            {
+	            @:{"height": @f.Resolution.Split("x")[1],"label":"@f.FormatNote","src": "/proxy/video?url=@HttpUtility.UrlEncode(f.Url)"},
+            }
+        ], "https://@(Context.Request.Host)/manifest/@(Model.Video.Id).mpd").then(x => player = x).catch(alert);
+    </script>
+		}
+		else if (live)
+		{
+			<script src="/js/hls.js/hls.min.js"></script>
+			<script>
+        let player = undefined;
+        loadPlayerWithHls("video", {
+            "id": "@(Model.Video.Id)",
+            "title": "@(Model.Video.Title)",
+            "embed": false,
+            "live": true
+        }, "https://@(Context.Request.Host)/manifest/@(Model.Video.Id).m3u8").then(x => player = x).catch(alert);
+    </script>
+		}
+		else
+		{
+			<script>
+        const player = new Player("video", {
+            "id": "@Model.Video.Id",
+            "title": "@Model.Video.Title",
+            "embed": false,
+            "live": false,
+            "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault(x => x.FormatId == "sb2")?.Url)"
+        }, [
+            @foreach (Format f in Model.Player.Formats.Reverse())
+            {
+	            @:{"height": @f.Resolution.Split("x")[1],"label":"@f.FormatNote","src": "/proxy/media/@(Model.Player.Id)/@(f.FormatId)"},
+            }
+        ]);
+    </script>
+		}
 	}
 }
