Add more items to the search screen

--- a/LightTube/wwwroot/css/mobile.css
+++ b/LightTube/wwwroot/css/mobile.css
@@ -767,6 +767,35 @@ a.icon-link, a.icon-link > i {
     background-color: var(--channel-contents-background);
 }
 
+/* card list item */
+
+.card-list {
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    column-gap: 16px;
+}
+
+.card {
+    width: 150px;
+    background: var(--context-menu-background);
+    border: 1px solid var(--border-color);
+    border-radius: 8px;
+    text-decoration: none;
+}
+
+.card > img {
+    aspect-ratio: 16 / 9;
+    width: 150px;
+    height: fit-content;
+}
+
+.card > span {
+    text-decoration: none;
+    color: var(--text-primary);
+    margin: 0 8px;
+}
+
 /* channel video "grid" */
 
 .video-grid {
