--- a/LightTube/Views/Youtube/Search.cshtml
+++ b/LightTube/Views/Youtube/Search.cshtml
@@ -10,81 +10,7 @@
 <div class="video-list">
 	@foreach (DynamicItem preview in Model.Results.Results)
 	{
-		switch (preview)
-		{
-			case VideoItem video:
-				<div class="video">
-					<a href="/watch?v=@video.Id" class="thumbnail"
-					   style="background-image: url('@video.Thumbnails.LastOrDefault()?.Url')"><span class="video-length">@video.Duration</span></a>
-					<div class="info">
-						<a href="/watch?v=@video.Id" class="title max-lines-2">@video.Title</a>
-						<div style="display: flex; flex-direction: column; row-gap: 8px">
-							<a href="/watch?v=@video.Id">
-								<span>@video.Views views</span>
-								<span>•</span>
-								<span>@video.UploadedAt</span>
-							</a>
-							<a href="/channel/@video.Channel.Id"><img alt="Channel Avatar" src="@video.Channel.Avatars.LastOrDefault()?.Url"> @video.Channel.Name</a>
-						</div>
-					</div>
-				</div>
-				break;
-			case PlaylistItem playlist:
-				<div class="playlist">
-					<a href="/watch?v=@playlist.FirstVideoId&amp;list=@playlist.Id" class="thumbnail" style="background-image: url('@playlist.Thumbnails.LastOrDefault()?.Url')">
-						<div>
-							<span>@playlist.VideoCount</span>
-							<span>VIDEOS</span>
-						</div>
-					</a>
-					<div class="info">
-						<a href="/watch?v=@playlist.Id" class="title max-lines-2">@playlist.Title</a>
-						<div>
-							<a href="/channel/@playlist.Channel.Id">@playlist.Channel.Name</a>
-							<ul>
-								<!--li><a href="#">Video #1 • 4:20</a></li-->
-								<li><a href="/playlist?list=@playlist.Id">View Full Playlist</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				break;
-			case RadioItem mix:
-				<div class="playlist">
-					<a href="/watch?v=@mix.FirstVideoId&amp;list=@mix.Id" class="thumbnail" style="background-image: url('@mix.Thumbnails.LastOrDefault()?.Url')">
-						<div>
-							<span>MIX</span>
-						</div>
-					</a>
-					<div class="info">
-						<a href="/watch?v=@mix.Id" class="title max-lines-2">@mix.Title</a>
-						<div>
-							<span>@mix.Channel.Name</span>
-						</div>
-					</div>
-				</div>
-				break;
-			case ChannelItem channel:
-				<div class="channel">
-					<a href="/channel/@channel.Id" class="avatar">
-						<img src="@channel.Thumbnails.LastOrDefault()?.Url" alt="Channel Avatar">
-					</a>
-					<a href="/channel/@channel.Id" class="info">
-						<span class="name max-lines-2">@channel.Title</span>
-						<div>
-							<div>
-								<span>@channel.Subscribers</span>
-								<span>•</span>
-								<span>@channel.VideoCount videos</span>
-							</div>
-							<p>@Html.Raw(channel.Description)</p>
-						</div>
-					</a>
-					<button class="subscribe-button" data-cid="@channel.Id">Subscribe</button>
-				</div>
-				break;
-			// TODO: Add shelves, cards
-		}
+		@preview.GetHtml()
 	}
 </div>
 <div class="pagination-buttons">
