--- a/LightTube/wwwroot/css/colors-light.css
+++ b/LightTube/wwwroot/css/colors-light.css
@@ -6,10 +6,7 @@
     --context-menu-background: #f2f2f2;
     --border-color: #c5c5c5;
     --item-hover-background: #f2f2f2;
-    --item-active-background: #E5E5E5;
-
-    --engagement-bar-background: #CCCCCC;
-    --engagement-bar-foreground: #909090;
+    --item-active-background: #E5E5E5;;
 
     --top-bar-background: #FFF;
     --guide-background: #FFF;
