--- a/LightTube/wwwroot/css/mobile.css
+++ b/LightTube/wwwroot/css/mobile.css
@@ -921,6 +921,7 @@ a.icon-link, a.icon-link > i {
     height: auto;
     aspect-ratio: 16 / 9;
     background-color: var(--thumbnail-background);
+    background-size: contain;
 }
 
 .playlist-info > .thumbnail > a {
@@ -1083,4 +1084,32 @@ a.icon-link, a.icon-link > i {
 
 .fullscreen-account-menu > .guide-item.active {
     background-color: var(--item-active-background);
+}
+
+/* download page */
+
+.download-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 32px;
+}
+
+.download-format {
+    max-width: 400px;
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+}
+
+.download-format > div {
+    color: var(--text-primary);
+}
+
+.download-format > a {
+    padding: 8px;
+    background-color: var(--channel-contents-background);
+    border: 1px solid var(--border-color);
+    text-decoration: none;
 }
