Categorize stuff in DatabaseManager

--- a/LightTube/Views/Shared/_LoginLogoutPartial.cshtml
+++ b/LightTube/Views/Shared/_LoginLogoutPartial.cshtml
@@ -1,3 +1,4 @@
+@using LightTube.Database
 @if (Context.TryGetUser(out LTUser user, "web"))
 {
 	<div class="guide-item"><a>@user.Email.Split("@")[0]</a></div>
