--- a/LightTube/Views/Shared/_LoginLogoutPartial.cshtml
+++ b/LightTube/Views/Shared/_LoginLogoutPartial.cshtml
@@ -13,4 +13,4 @@ else
 	<div class="guide-item"><a href="/Account/Login">Log in</a></div>
 	<div class="guide-item"><a href="/Account/Register">Register</a></div>
 }
-<div class="guide-item"><a href="/Account/ContentSettings">Settings</a></div>
+<div class="guide-item"><a href="/Account/Settings">Settings</a></div>
