Add title to logins

--- a/LightTube/Views/Account/Logins.cshtml
+++ b/LightTube/Views/Account/Logins.cshtml
@@ -5,7 +5,7 @@
 	Layout = "_Layout";
 }
 
-
+<h1 style="text-align:center;">Active Logins</h1>
 <div class="logins-container">
 	@foreach (LTLogin login in Model.Logins)
 	{
