Update API location

--- a/LightTube/Views/Shared/_Layout.cshtml
+++ b/LightTube/Views/Shared/_Layout.cshtml
@@ -125,7 +125,7 @@
 		<a href="https://gitlab.com/kuylar/lighttube/-/blob/master/README.md">About</a><br>
 		<a href="https://gitlab.com/kuylar/lighttube/-/blob/master/OTHERLIBS.md">How LightTube works</a><br>
 		<a href="https://gitlab.com/kuylar/lighttube">Source code</a>
-		<a href="https://gitlab.com/kuylar/lighttube/-/blob/master/API.md">API</a>
+		<a href="https://gitlab.com/kuylar/lighttube/-/wikis/XML-API">API</a>
 	</p>
 </div>
 
