Add create playlist page

--- a/LightTube/Views/Account/AddVideoToPlaylist.cshtml
+++ b/LightTube/Views/Account/AddVideoToPlaylist.cshtml
@@ -31,6 +31,7 @@
 	</div>
 	<div class="video-list playlist-list playlist-video-list">
 		<h3>Add to one of these playlists:</h3>
+		<a class="login-button" href="/Account/CreatePlaylist" style="margin:unset;">Create playlist</a>
 		@foreach (LTPlaylist playlist in Model.Playlists)
 		{
 			<div class="playlist-video">
