--- a/LightTube/wwwroot/css/desktop.css
+++ b/LightTube/wwwroot/css/desktop.css
@@ -1056,6 +1056,24 @@ a.icon-button, a.icon-button > img {
     margin: auto;
 }
 
+.playlist-form {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+    row-gap: 10px;
+    margin: auto;
+}
+
+.playlist-form > input, .playlist-form > select, .login-button {
+    background-color: var(--item-active-background);
+    color: var(--text-primary);
+    border: 1px solid var(--border-color);
+    padding: 10px;
+    width: 80%;
+    row-gap: 10px;
+    margin: auto;
+}
+
 .login-button {
     background-color: var(--item-active-background);
     color: var(--text-primary);
