i opened youtube and saw that it didnt say "add to playlist"

--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -165,7 +165,7 @@
 	                </a>
 	                <a href="/Account/AddVideoToPlaylist?v=@Model.Video.Id">
                 		<i class="bi bi-folder-plus"></i>
-                		@(Model.MobileLayout ? "Add" : "Add to playlist")
+                		Save
 	                </a>
 	                <a href="https://www.youtube.com/watch?v=@Model.Video.Id">
                 		<i class="bi bi-share"></i>
