--- a/LightTube/wwwroot/css/colors-dark.css
+++ b/LightTube/wwwroot/css/colors-dark.css
@@ -1,6 +1,7 @@
 :root {
     --text-primary: #fff;
     --text-secondary: #808080;
+    --text-link: #3ea6ff;
 
     --app-background: #181818;
     --context-menu-background: #333;
