--- a/LightTube/wwwroot/css/colors-light.css
+++ b/LightTube/wwwroot/css/colors-light.css
@@ -1,6 +1,7 @@
 :root {
     --text-primary: #000;
     --text-secondary: #606060;
+    --text-link: #3ea6ff;
 
     --app-background: #f9f9f9;
     --context-menu-background: #f2f2f2;
