--- a/LightTube/wwwroot/css/lt-video/player-desktop.css
+++ b/LightTube/wwwroot/css/lt-video/player-desktop.css
@@ -14,6 +14,7 @@
 
 .player * {
     color: #fff;
+    box-sizing: content-box;
 }
 
 .player.embed, video.embed {
@@ -133,7 +134,12 @@
     z-index: 3;
     position: relative;
     background-color: #000a !important;
-    width: 150px;
+    width: 200px;
+}
+
+.player-menu > div {
+    overflow-y: scroll;
+    max-height: 300px;
 }
 
 .player-menu-item {
@@ -141,6 +147,13 @@
     height: 2rem;
     line-height: 2rem;
     color: white;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 .player-menu-item > .bi {
