--- a/LightTube/Views/Youtube/Embed.cshtml
+++ b/LightTube/Views/Youtube/Embed.cshtml
@@ -106,7 +106,7 @@ else
         let player = undefined;
         loadPlayerWithShaka("video", {
             "id": "@Model.Video.Id",
-            "title": "@Html.Raw(Model.Video.Title)",
+            "title": "@Html.Raw(Model.Video.Title.Replace("\"", "\\\""))",
             "embed": true,
             "live": false,
             "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault(x => x.FormatId == "sb2")?.Url)"
@@ -125,7 +125,7 @@ else
         let player = undefined;
         loadPlayerWithHls("video", {
             "id": "@(Model.Video.Id)",
-            "title": "@Html.Raw(Model.Video.Title)",
+            "title": "@Html.Raw(Model.Video.Title.Replace("\"", "\\\""))",
             "embed": true,
             "live": true
         }, "https://@(Context.Request.Host)/manifest/@(Model.Video.Id).m3u8").then(x => player = x).catch(alert);
@@ -136,7 +136,7 @@ else
     <script>
         const player = new Player("video", {
             "id": "@Model.Video.Id",
-            "title": "@Html.Raw(Model.Video.Title)",
+            "title": "@Html.Raw(Model.Video.Title.Replace("\"", "\\\""))",
             "embed": true,
             "live": false,
             "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault(x => x.FormatId == "sb2")?.Url)"
