--- a/LightTube/wwwroot/css/desktop.css
+++ b/LightTube/wwwroot/css/desktop.css
@@ -369,6 +369,23 @@ a.icon-button, a.icon-button > img {
 }
 
 .channel-info {
+    display: grid;
+    grid-template-columns: 48px max-content 1fr min-content;
+    grid-template-rows: 48px;
+    grid-auto-columns: 1fr;
+    gap: 8px;
+    grid-auto-flow: row;
+    grid-template-areas: "avatar name . subscribe-button";
+
+    padding-top: 16px;
+}
+
+.channel-info > .avatar > img {
+    width: 100%;
+    height: 100%;
+}
+
+.channel-info__bordered {
     border: 1px solid var(--border-color);
     border-radius: 4px;
     display: grid;
