--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -218,7 +218,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="channel-info">
+			<div class="channel-info__bordered">
 				<a href="/channel/@Model.Video.Channel.Id" class="avatar">
 					<img src="@Model.Video.Channel.Avatars.FirstOrDefault()?.Url">
 				</a>
