--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -1,5 +1,3 @@
-@using System.Collections.Specialized
-@using System.Globalization
 @using System.Text.RegularExpressions
 @using System.Web
 @using InnerTube.Models
@@ -48,102 +46,41 @@
 <div class="watch-page">
 	<div class="primary">
 		<div class="video-player-container">
-			@if (Model.MobileLayout)
+			
+			@if (Model.Player.Formats.Length > 0 || live)
 			{
-				@if (Model.Player.Formats.Length > 0 || live && !compatibility)
+				@if (live)
 				{
-					@if (live)
-					{
-						<video id="player" class="video-js player" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url" controls>
-							@foreach (Format format in Model.Player.AdaptiveFormats.Reverse())
-							{
-								@:<source label='@format.Resolution.Split("x")[1]P' src='/proxy/hls?url=@HttpUtility.UrlEncode(format.Url.ToString())' type="application/x-mpegURL">
-							}
-
-							@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
-							{
-								@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url.ToString())" label="@subtitle.Language" kind="subtitles">
-							}
-						</video>
-					}
-					else
-					{
-						<video id="player" class="video-js player" src="/proxy/video?url=@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url" controls>
-							@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
-							{
-								@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url.ToString())" label="@subtitle.Language" kind="subtitles">
-							}
-						</video>
-					}
-				}
-				else if (live && compatibility)
-				{
-					<div id="player" class="player error" style="background-image: url('@Model.Player.Thumbnails.LastOrDefault()?.Url')">
-						<span style="text-align: center">
-							Livestreams cannot be played in compatibility mode<br>
-							<a style="color: var(--text-link)" href="/toggles/compatibility?redirectUrl=@(HttpUtility.UrlEncode($"{Context.Request.Path}{Context.Request.QueryString}"))">Click here</a> to disable compatibility mode
-						</span>
-					</div>
+					<video class="player" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
+					</video>
 				}
 				else
 				{
-					<div id="player" class="player error" style="background-image: url('@Model.Player.Thumbnails.LastOrDefault()?.Url')">
-						@if (string.IsNullOrWhiteSpace(Model.Player.ErrorMessage))
+					<video class="player" controls src="/proxy/video?url=@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
+						@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
 						{
-							<span>
-								No playable streams returned from the API (@Model.Player.Formats.Length/@Model.Player.AdaptiveFormats.Length)
-							</span>
+							@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url)" label="@subtitle.Language" kind="subtitles">
 						}
-						else
-						{
-							<span>
-								@Model.Player.ErrorMessage
-							</span>
-						}
-					</div>
+					</video>
 				}
 			}
 			else
 			{
-				@if (Model.Player.Formats.Length > 0 || live)
-				{
-					@if (live)
+				canPlay = false;
+				<div id="player" class="player error" style="background-image: url('@Model.Player.Thumbnails.LastOrDefault()?.Url')">
+					@if (string.IsNullOrWhiteSpace(Model.Player.ErrorMessage))
 					{
-						<video class="player" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
-							@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
-							{
-								@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url)" label="@subtitle.Language" kind="subtitles">
-							}
-						</video>
+						<span>
+							No playable streams returned from the API (@Model.Player.Formats.Length/@Model.Player.AdaptiveFormats.Length)
+						</span>
 					}
 					else
 					{
-						<video class="player" controls src="/proxy/video?url=@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url">
-							@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
-							{
-								@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url)" label="@subtitle.Language" kind="subtitles">
-							}
-						</video>
+						<span>
+							@Model.Player.ErrorMessage
+						</span>
 					}
-				}
-				else
-				{
-					canPlay = false;
-					<div id="player" class="player error" style="background-image: url('@Model.Player.Thumbnails.LastOrDefault()?.Url')">
-						@if (string.IsNullOrWhiteSpace(Model.Player.ErrorMessage))
-						{
-							<span>
-								No playable streams returned from the API (@Model.Player.Formats.Length/@Model.Player.AdaptiveFormats.Length)
-							</span>
-						}
-						else
-						{
-							<span>
-								@Model.Player.ErrorMessage
-							</span>
-						}
-					</div>
-				}
+				</div>
 			}
 		</div>
 		@if (Model.MobileLayout)
@@ -329,176 +266,63 @@
 	</div>
 </div>
 
-@if (Model.MobileLayout)
+@if (canPlay)
 {
-	@if (Model.Player.Formats.Length > 0 || live && !compatibility)
+	@if (Model.MobileLayout)
 	{
-		@if (!compatibility && !live)
-		{
-			<script src="~/js/shaka-player/shaka-player.compiled.min.js"></script>
-			<script src="~/js/videojs/video.js"></script>
-			<script src="~/js/videojs/videojs-shaka.js"></script>
-			<script src="~/js/videojs/videojs-hotkeys.js"></script>
-			<script>
-			var player = videojs('player', {
-	            techOrder: ['shaka'],
-	            shaka: {
-	              debug: false,
-	              sideload: true,
-	              configuration: {
-	                manifest:
-	                {
-						dash:{
-							ignoreEmptyAdaptationSet:true
-						}
-					}
-	              }   
-	            },
-				controlBar: {
-   					children: [
-   						'playToggle',
-   						'volumePanel',
-   						'currentTimeDisplay',
-   						'timeDivider',
-   						'durationDisplay',
-   						'liveDisplay',
-   						'seekToLive',
-   						'progressControl',
-   						'spacer',
-   						'chaptersButton',
-   						'subsCapsButton',
-   						'playbackRateMenuButton',
-   						'qualitySelector',
-   						'pictureInPictureToggle',
-   						'fullscreenToggle',
-   					],
-   				}
-	        }).ready(function() {
-				this.qualityPickerPlugin();
-				this.src([{
-					type: 'application/dash+xml',
-            		src: '/manifest/@(Model.Video.Id).mpd'
-	            }]);
-				this.hotkeys({
-					volumeStep: 0.1,
-					seekStep: 5,
-					enableModifiersForNumbers: false,
-					enableVolumeScroll: false
-				});
-				this.on("error", () => {if (confirm("Something has gone wrong while trying to play this video. Enable compatibility mode?")) {window.location = "/toggles/compatibility?redirectUrl=" + encodeURIComponent(window.location.href)}})
-			});
-			</script>
-		}
-		else
-		{
-			<script src="~/js/videojs/video.js"></script>
-			<script src="~/js/videojs/videojs-quality-selector.js"></script>
-			<script src="~/js/videojs/videojs-hotkeys.js"></script>
-
-			<script>
-			const player = videojs('player', {
-				controlBar: {
-					children: [
-						'playToggle',
-						'volumePanel',
-						'currentTimeDisplay',
-						'timeDivider',
-						'durationDisplay',
-						'liveDisplay',
-						'seekToLive',
-						'progressControl',
-						'spacer',
-						'chaptersButton',
-						'subsCapsButton',
-						'playbackRateMenuButton',
-						'qualitySelector',
-						'pictureInPictureToggle',
-						'fullscreenToggle',
-					],
-				}
-			}).ready(function() {
-				this.src([
-					@if (live)
-					{
-						foreach (Format format in Model.Player.AdaptiveFormats.Reverse().GroupBy(x => x.FormatNote).Select(g => g.First()))
-						{
-							@:{src: '/proxy/hls?url=@HttpUtility.UrlEncode(format.Url.ToString())'},
-						}
-					}
-					else
-					{
-						foreach (Format format in Model.Player.Formats.Reverse().GroupBy(x => x.FormatNote).Select(g => g.First()))
-						{
-							NameValueCollection query = HttpUtility.ParseQueryString(format.Url.Split("?")[1]);
-
-							@:{src: '/proxy/video?url=@HttpUtility.UrlEncode(format.Url.ToString())',type: '@query.Get("mime")',label: '@format.FormatNote', selected: @(format.FormatNote.StartsWith("720p") ? "true" : "false")},
-						}
-					}
-				]);
-				this.hotkeys({
-					volumeStep: 0.1,
-					seekStep: 5,
-					enableModifiersForNumbers: false,
-					enableVolumeScroll: false
-				});
-			  });
-		</script>
-		}
+		<script src="/js/lt-video/player-mobile.js"></script>
 	}
-}
-else
-{
-	@if (canPlay)
+	else
 	{
 		<script src="/js/lt-video/player-desktop.js"></script>
-		@if (!Model.CompatibilityMode && !live)
-		{
-			<script src="/js/shaka-player/shaka-player.compiled.min.js"></script>
-			<script>
-        let player = undefined;
-        loadPlayerWithShaka("video", {
-            "id": "@Model.Video.Id",
-            "title": "@Html.Raw(Model.Video.Title.Replace("\"", "\\\""))",
-            "embed": false,
-            "live": false,
-            "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault(x => x.FormatId == "sb2")?.Url)"
-        }, [
-            @foreach (Format f in Model.Player.Formats.Reverse())
-            {
-	            @:{"height": @f.Resolution.Split("x")[1],"label":"@f.FormatNote","src": "/proxy/video?url=@HttpUtility.UrlEncode(f.Url)"},
-            }
-        ], "https://@(Context.Request.Host)/manifest/@(Model.Video.Id).mpd").then(x => player = x).catch(alert);
-    </script>
-		}
-		else if (live)
-		{
-			<script src="/js/hls.js/hls.min.js"></script>
-			<script>
-        let player = undefined;
-        loadPlayerWithHls("video", {
-            "id": "@(Model.Video.Id)",
-            "title": "@Html.Raw(Model.Video.Title.Replace("\"", "\\\""))",
-            "embed": false,
-            "live": true
-        }, "https://@(Context.Request.Host)/manifest/@(Model.Video.Id).m3u8").then(x => player = x).catch(alert);
-    </script>
-		}
-		else
-		{
-			<script>
-        const player = new Player("video", {
-            "id": "@Model.Video.Id",
-            "title": "@Html.Raw(Model.Video.Title.Replace("\"", "\\\""))",
-            "embed": false,
-            "live": false,
-            "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault(x => x.FormatId == "sb2")?.Url)"
-        }, [
-            @foreach (Format f in Model.Player.Formats.Reverse())
-            {
-	            @:{"height": @f.Resolution.Split("x")[1],"label":"@f.FormatNote","src": "/proxy/media/@(Model.Player.Id)/@(f.FormatId)"},
-            }
-        ]);
-    </script>
-		}
+	}
+	@if (!Model.CompatibilityMode && !live)
+	{
+		<script src="/js/shaka-player/shaka-player.compiled.min.js"></script>
+		<script>
+    let player = undefined;
+    loadPlayerWithShaka("video", {
+        "id": "@Model.Video.Id",
+        "title": "@Html.Raw(Model.Video.Title.Replace("\"", "\\\""))",
+        "embed": false,
+        "live": false,
+        "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault(x => x.FormatId == "sb2")?.Url)"
+    }, [
+        @foreach (Format f in Model.Player.Formats.Reverse())
+        {
+            @:{"height": @f.Resolution.Split("x")[1],"label":"@f.FormatNote","src": "/proxy/video?url=@HttpUtility.UrlEncode(f.Url)"},
+        }
+    ], "https://@(Context.Request.Host)/manifest/@(Model.Video.Id).mpd").then(x => player = x).catch(alert);
+</script>
+	}
+	else if (live)
+	{
+		<script src="/js/hls.js/hls.min.js"></script>
+		<script>
+    let player = undefined;
+    loadPlayerWithHls("video", {
+        "id": "@(Model.Video.Id)",
+        "title": "@Html.Raw(Model.Video.Title.Replace("\"", "\\\""))",
+        "embed": false,
+        "live": true
+    }, "https://@(Context.Request.Host)/manifest/@(Model.Video.Id).m3u8").then(x => player = x).catch(alert);
+</script>
+	}
+	else
+	{
+		<script>
+    const player = new Player("video", {
+        "id": "@Model.Video.Id",
+        "title": "@Html.Raw(Model.Video.Title.Replace("\"", "\\\""))",
+        "embed": false,
+        "live": false,
+        "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault(x => x.FormatId == "sb2")?.Url)"
+    }, [
+        @foreach (Format f in Model.Player.Formats.Reverse())
+        {
+            @:{"height": @f.Resolution.Split("x")[1],"label":"@f.FormatNote","src": "/proxy/media/@(Model.Player.Id)/@(f.FormatId)"},
+        }
+    ]);
+</script>
 	}
 }
